5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1764_1183.log
== TEST (2019-05-28 16:50:01) 
-- CODE:
vetor = array(eval(input("vetor:")))
v = array([ vetor for vetor in a ifx>0 ])
print(v)
-- ERROR:
File "XXXX", line 2
    v = array([ vetor for vetor in a ifx>0 ])
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:50:02) 
-- CODE:
vetor = array(eval(input("vetor:")))
v = array([ vetor for vetor in a ifx>0 ])
print(v)
-- EXECUTION TIME:
0.137998
-- ERROR:
  File "/home/codebench/codes/1764/1183/main.py", line 2
    v = array([ vetor for vetor in a ifx>0 ])
                                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:50:20) 
-- CODE:
vetor = array(eval(input("vetor:")))
v = array([ vetor for vetor in a if x>0 ])
print(v)
-- EXECUTION TIME:
0.159522
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1183/main.py", line 1, in <module>
    vetor = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:50:49) 
-- CODE:
vetor = array(eval(input("vetor:")))
v = array([ vetor for vetor in vetor if x>0 ])
print(v)
-- EXECUTION TIME:
0.217619
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1183/main.py", line 1, in <module>
    vetor = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:51:49) 
-- CODE:
vetor = array(eval(input("vetor:")))
v = array([ x for x in vetor if x>0 ])
print(v)
-- EXECUTION TIME:
0.178257
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1183/main.py", line 1, in <module>
    vetor = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:51:50) 
-- CODE:
vetor = array(eval(input("vetor:")))
v = array([ x for x in vetor if x>0 ])
print(v)
-- EXECUTION TIME:
0.167621
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1183/main.py", line 1, in <module>
    vetor = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:52:33) 
-- CODE:
from numpy import * 
vetor = array(eval(input("vetor:")))
v = array([ x for x in vetor if x>0 ])
print(v)
-- EXECUTION TIME:
0.419259
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
